<resources>
    <string name="app_name">IMD BookStore</string>
    <string name="come_ar">Começar</string>
    <string name="login_se_cadastrado">Já é cadastrado? Fazer Login</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="btn_criar_conta">Criar Conta</string>
    <string name="tela_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="ainda_n_o_tem_uma_conta">Ainda não tem uma conta?</string>
    <string name="mudar_senha">Mudar Senha</string>
    <string name="btn_mudar_senha">Mudar Senha</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="seja_bem_vindo_a">Seja bem vindo(a),</string>
    <string name="cadastrar_livro">Cadastrar Livro</string>
    <string name="listar_livros">Listagem de Livros</string>
    <string name="atualizar_livro">Atualizar Livro</string>
    <string name="excluir_livro">Excluir Livro</string>
    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="editora">Editora</string>
    <string name="isbn">ISBN</string>
    <string name="descricao">Descrição</string>
    <string name="url_imagem_capa">URL da Imagem da Capa do Livro</string>
    <string name="nome_usuario">""</string>
    <string name="campo_vazio">""</string>
    <string name="detalhes_livro">Informações do Livro</string>
    <string name="voltar">Voltar</string>
    <string name="info_titulo">""</string>
    <string name="info_autor">""</string>
    <string name="info_editora">""</string>
    <string name="info_isbn">""</string>
    <string name="info_descricao">""</string>
</resources>