<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/acme"
        android:text="@string/tela_login"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/nome"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/senha"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etSenha"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="21dp"
        android:height="60.dp"
        android:backgroundTint="#86C144"
        android:fontFamily="@font/acme"
        android:text="@string/btn_login"
        android:textSize="24.sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="text"
        android:labelFor="@id/tvNome"
        android:requiresFadingEdge="none"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="201dp" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPassword"
        android:labelFor="@id/tvSenha"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="301dp" />

    <TextView
        android:id="@+id/tvEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/acme"
        android:text="@string/esqueci_minha_senha"
        android:textSize="18.sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#2043D114"
        android:minHeight="100.dp"
        app:contentPadding="20.dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSemConta">

        <Button
            android:id="@+id/btnCriarConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20.dp"
            android:height="60.dp"
            android:backgroundTint="#4d86c144"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/criar_conta"
            android:textColor="#272727"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSemConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/acme"
        android:text="@string/ainda_n_o_tem_uma_conta"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEsqueceuSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>