<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrocarSenhaActivity">

    <TextView
        android:id="@+id/tvMudarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/acme"
        android:text="@string/mudar_senha"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/acme"
        android:text="@string/nome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="8dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="text"
        android:labelFor="@id/tvNome"
        android:requiresFadingEdge="none"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <TextView
        android:id="@+id/tvNovaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/acme"
        android:text="@string/nova_senha"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <EditText
        android:id="@+id/etNovaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="8dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPassword"
        android:labelFor="@id/tvNovaSenha"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNovaSenha" />

    <Button
        android:id="@+id/btnMudarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="21dp"
        android:height="60.dp"
        android:backgroundTint="#86C144"
        android:fontFamily="@font/acme"
        android:text="@string/btn_mudar_senha"
        android:textSize="24.sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNovaSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>