<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <TextView
        android:id="@+id/tvCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/acme"
        android:text="@string/criar_conta"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/nome"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/senha"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etSenha"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginBottom="195dp"
        android:height="60.dp"
        android:backgroundTint="#86C144"
        android:fontFamily="@font/acme"
        android:text="@string/btn_criar_conta"
        android:textSize="24.sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginBottom="55dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="text"
        android:labelFor="@id/tvNome"
        android:requiresFadingEdge="none"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/tvSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginBottom="37dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:inputType="textPassword"
        android:labelFor="@id/tvSenha"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnCriarConta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>