<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/tvExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/acme"
        android:text="@string/excluir_livro"
        android:textSize="22.sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider4"
        android:layout_width="349dp"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="#4D86C144"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:srcCompat="@drawable/delete_30dp_86c144_fill0_wght400_grad0_opsz24" />

    <TextView
        android:id="@+id/tvAtualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/acme"
        android:text="@string/atualizar_livro"
        android:textSize="22.sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="349dp"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="#4D86C144"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/update_30dp_86c144_fill0_wght400_grad0_opsz24" />

    <TextView
        android:id="@+id/tvListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/acme"
        android:text="@string/listar_livros"
        android:textSize="22.sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="349dp"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:background="#4D86C144"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:srcCompat="@drawable/list_30dp_86c144_fill0_wght400_grad0_opsz24" />

    <TextView
        android:id="@+id/tvBoasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/acme"
        android:text="@string/seja_bem_vindo_a"
        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/acme"
        android:text="@string/nome_usuario"
        android:textSize="40.sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBoasVindas" />

    <View
        android:id="@+id/divider1"
        android:layout_width="349dp"
        android:layout_height="1dp"
        android:layout_marginTop="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="63dp"
        android:background="#4D86C144"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeUsuario"
        app:srcCompat="@drawable/add_30dp_86c144_fill0_wght400_grad0_opsz24" />

    <TextView
        android:id="@+id/tvCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/acme"
        android:text="@string/cadastrar_livro"
        android:textSize="22.sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>