<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlteracaoDeLivroActivity">

    <TextView
        android:id="@+id/tvAlteracaoLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/acme"
        android:text="@string/atualizar_livro"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/acme"
        android:text="@string/titulo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="5dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/acme"
        android:inputType="text"
        android:labelFor="@id/tvTitulo"
        android:requiresFadingEdge="none"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/acme"
        android:text="@string/autor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitulo2" />

    <EditText
        android:id="@+id/etAutor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="5dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/acme"
        android:inputType="text"
        android:labelFor="@id/tvAutor"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAutor" />


    <Button
        android:id="@+id/btnAtualizarLivro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="21dp"
        android:height="60.dp"
        android:backgroundTint="#86C144"
        android:fontFamily="@font/acme"
        android:text="@string/atualizar_livro"
        android:textSize="24.sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etURL2" />

    <TextView
        android:id="@+id/tvEditora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/acme"
        android:text="@string/editora"
        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAutor2" />

    <EditText
        android:id="@+id/etEditora2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="6dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:enabled="true"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditora" />

    <TextView
        android:id="@+id/tvISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/acme"
        android:text="@string/isbn"
        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditora2" />

    <EditText
        android:id="@+id/etISBN2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="5dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:enabled="true"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvISBN" />

    <TextView
        android:id="@+id/tvDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/acme"
        android:text="@string/descricao"
        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etISBN2" />

    <EditText
        android:id="@+id/etDescricao2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="4dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:enabled="true"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescricao" />

    <TextView
        android:id="@+id/tvURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/acme"
        android:text="@string/url_imagem_capa"
        android:textSize="20.sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescricao2" />

    <EditText
        android:id="@+id/etURL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30.dp"
        android:layout_marginTop="5dp"
        android:height="60.dp"
        android:backgroundTint="#272727"
        android:cursorVisible="true"
        android:ems="10"
        android:enabled="true"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvURL" />

</androidx.constraintlayout.widget.ConstraintLayout>